--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Marca</title>
+    <title>Home - Brand</title>
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" sizes="784x784" href="assets/img/kisspng-studio-tecnico-associato-delazer-architectural-eng-construction-graphics-5a8ad68f9c70c9.9206171715190483356408.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
 </head>
 
@@ -32,7 +32,7 @@
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase"><strong>Poço te ajudar a construir o seu site.</strong></h1>
+                    <h1 class="text-uppercase"><strong>Posso te ajudar a construir o seu site.</strong></h1>
                     <hr>
                 </div>
             </div>
@@ -47,8 +47,7 @@
                 <div class="col offset-lg-8 text-center mx-auto">
                     <h2 class="text-white section-heading">Nós temos o que você precisa!</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4" style="color: rgba(255,255,255,0.84);">O Bootstrap tem tudo o que você precisa para colocar seu novo site em funcionamento rapidamente! Todos os modelos e temas são de código aberto, gratuitos para download e fáceis de usar. Sem condições!</p><a class="btn btn-light btn-xl"
-                        role="button" href="#services">INICIAR!</a>
+                    <p class="text-faded mb-4" style="color: rgba(255,255,255,0.84);">O Bootstrap tem tudo o que você precisa para colocar seu novo site em funcionamento rapidamente! Todos os modelos e temas são de código aberto, gratuitos para download e fáceis de usar. Sem condições!</p><a class="btn btn-light btn-xl" role="button" href="#services">INICIAR!</a>
                 </div>
             </div>
         </div>
@@ -94,66 +93,54 @@
     <section id="portfolio" class="p-0">
         <div class="container-fluid p-0">
             <div class="row g-0 popup-gallery">
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/1.jpg"><img class="img-fluid" src="assets/img/thumbnails/1.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/1.jpg"><img class="img-fluid" src="assets/img/thumbnails/1.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/2.jpg"><img class="img-fluid" src="assets/img/thumbnails/2.jpg">
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/2.jpg"><img class="img-fluid" src="assets/img/thumbnails/2.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/3.jpg"><img class="img-fluid" src="assets/img/thumbnails/3.jpg">
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/3.jpg"><img class="img-fluid" src="assets/img/thumbnails/3.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/4.jpg"><img class="img-fluid" src="assets/img/thumbnails/4.jpg">
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/4.jpg"><img class="img-fluid" src="assets/img/thumbnails/4.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/5.jpg"><img class="img-fluid" src="assets/img/thumbnails/5.jpg">
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/5.jpg"><img class="img-fluid" src="assets/img/thumbnails/5.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/6.jpg"><img class="img-fluid" src="assets/img/thumbnails/6.jpg">
+                    </a></div>
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/6.jpg"><img class="img-fluid" src="assets/img/thumbnails/6.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded"><span>Category</span></div>
                                 <div class="project-name"><span>Project Name</span></div>
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </a></div>
             </div>
         </div>
     </section>
@@ -178,8 +165,8 @@
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/aos.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
     <script src="assets/js/creative.js"></script>
 </body>
